<resources>
    <string name="app_name">Td5OpenDiag</string>

    <string name="air_fuel_ratio">Air/Fuel ratio</string>
    <string name="air_fuel_ratio_label">Air/Fuel</string>
    <string name="air_fuel_ratio_short">AFR</string>
    <string name="air_fuel_ratio_unit">ratio</string>

    <string name="ambient_pressure">Ambient Pressure</string>
    <string name="ambient_pressure_label">Amb. Pressure</string>
    <string name="ambient_pressure_short">AP</string>
    <string name="ambient_pressure_unit_short">kPa</string>

    <string name="battery_voltage">Battery voltage</string>
    <string name="battery_voltage_label">Bat. Volt.</string>
    <string name="battery_voltage_short">BAT</string>

    <string name="cylinder_balance">Cylinder balance</string>
    <string name="cylinder_balance_label">Cyl. Bal.</string>
    <string name="cylinder_balance_short">CB %d</string>
    <string name="cylinder_balance_unit">Balance</string>

    <string name="engine_coolant_temperature">Engine Coolant Temperature</string>
    <string name="engine_coolant_temperature_label">Coolant Temp.</string>
    <string name="engine_coolant_temperature_short">ECT</string>

    <string name="engine_rpm">Engine RPM</string>
    <string name="engine_rpm_label">Engine RPM</string>
    <string name="engine_rpm_short">RPM</string>

    <string name="fuel_consumption_label">Fuel consumption</string>
    <string name="fuel_consumption_unit">l/100km</string>


    <string name="fuel_demand_driver">Driver fuel demand</string>
    <string name="fuel_demand_driver_label">Driver demand</string>
    <string name="fuel_demand_driver_short">Driver dmd.</string>

    <string name="fuel_demand_idle">Idle fuel Demand</string>
    <string name="fuel_demand_idle_label">Idle demand</string>
    <string name="fuel_demand_idle_short">IDLE DMD</string>

    <string name="fuel_injection_quantity">Injection Quantity</string>
    <string name="fuel_injection_quantity_label">Inj. Quantity</string>
    <string name="fuel_injection_quantity_short">IQ</string>

    <string name="fuel_limiter_smoke">Smoke fuel limiter</string>
    <string name="fuel_limiter_smoke_label">Smoke limiter</string>
    <string name="fuel_limiter_smoke_short">Smoke lim.</string>

    <string name="fuel_limiter_torque">Torque fuel limiter</string>
    <string name="fuel_limiter_torque_label">Torque limiter</string>
    <string name="fuel_limiter_torque_short">Torque lim.</string>

    <string name="fuel_temperature">Fuel Temperature</string>
    <string name="fuel_temperature_label">Fuel Temp.</string>
    <string name="fuel_temperature_short">FT</string>
    <string name="fuel_temperature_unit_short">°C</string>

    <string name="intake_air_temperature">Intake Air Temperature</string>
    <string name="intake_air_temperature_label">In. Air Temp.</string>
    <string name="intake_air_temperature_short">IAT</string>
    <string name="intake_air_temperature_unit_short">°C</string>

    <string name="intake_maf_airMass_label">MAF air mass</string>
    <string name="intake_maf_airMass_label_label">MAF air mass</string>
    <string name="intake_maf_airMass_label_short">MAF AM</string>

    <string name="intake_map_airMass_label">MAP air mass</string>
    <string name="intake_map_airMass_label_label">MAP air mass</string>
    <string name="intake_map_airMass_label_short">MAP AM</string>

    <string name="manifold_turbo_pressure">Manifold Air Pressure</string>
    <string name="manifold_turbo_pressure_label">MAP (turbo)</string>
    <string name="manifold_turbo_pressure_short">MAP</string>
    <string name="manifold_turbo_pressure_unit_short">bar</string>

    <string name="mass_airflow">Mass Airflow (mg/stroke)</string>
    <string name="mass_airflow_label">Mass Airflow</string>
    <string name="mass_airflow_short">MAF</string>
    <!--<string name="mass_airflow_unit_short">g/h</string>-->
    <string name="mass_airflow_unit_short">mg/strk</string>

    <string name="accelerator_track_1">ACC track 1</string>
    <string name="accelerator_track_2">ACC track 2</string>
    <string name="accelerator_track_3">ACC track 3</string>
    <string name="accelerator_track_unit">-.- V</string>

</resources>
