<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mooo.hairyone.td5tester.fragments.FuelFragment"
    android:padding="1sp"
    android:orientation="vertical"
    android:baselineAligned="false">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="16sp">

        <!--        <LinearLayout-->
        <!--            android:layout_width="0sp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_weight="1"-->
        <!--            android:gravity="center"-->
        <!--            android:orientation="vertical"-->
        <!--            tools:ignore="NestedWeights">-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:gravity="center"-->
        <!--                android:text="@string/idle_demand_label"-->
        <!--                android:textColor="@color/textColorPrimary"-->
        <!--                android:textSize="20sp"-->
        <!--                app:layout_gravity="fill" />-->

        <!--            <com.mooo.hairyone.td5tester.ui.helpers.Td5Gauge-->
        <!--                android:id="@+id/gauge_idle_demand"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:padding="10sp" />-->

        <!--        </LinearLayout>-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/fuel_demand_idle_label"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/fuel_demand_idle_value"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:text="-- mg"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/fuel_demand_driver_label"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/fuel_demand_driver_value"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:text="-- mg"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/fuel_limiter_torque_label"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/fuel_limiter_torque_value"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:text="-- mg"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/fuel_limiter_smoke_label"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/fuel_limiter_smoke_value"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:text="-- mg"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Space
                    android:layout_height="12sp"
                    android:layout_weight="10" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

<!--                <Space-->
<!--                    android:layout_height="10sp"-->
<!--                    android:layout_weight="100"-->
<!--                    android:background="#000000" />-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5sp"
                    android:layout_weight="1"
                    android:background="@android:color/black"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_height="12sp"
                    android:layout_weight="10" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/fuel_injection_quantity"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/fuel_injected_quantity"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:text="-- mg"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0sp"-->
<!--        android:padding="1sp"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_weight="1"-->
<!--        android:baselineAligned="false">-->



<!--        <LinearLayout-->
<!--            android:layout_width="0sp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:orientation="vertical"-->
<!--            tools:ignore="NestedWeights">-->

<!--            <TextView-->
<!--                android:id="@+id/weight"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/intake_air_temperature_label"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/textColorPrimary"-->
<!--                android:textSize="20sp" />-->

<!--            <com.mooo.hairyone.td5tester.ui.helpers.Td5Gauge-->
<!--                android:id="@+id/gauge_intakeAirTemp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="10sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/text_intakeAirTemp_value"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="xxx PlaceHolder xxx"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/textColorPrimary"-->
<!--                android:textSize="16sp" />-->

<!--        </LinearLayout>-->
<!--    </LinearLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:padding="1sp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="false">

<!--        <LinearLayout-->
<!--            android:layout_width="0sp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:orientation="vertical"-->
<!--            tools:ignore="NestedWeights">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/injection_quantity_label"-->
<!--                android:textColor="@color/textColorPrimary"-->
<!--                android:textSize="20sp"-->
<!--                app:layout_gravity="fill" />-->

<!--            <com.mooo.hairyone.td5tester.ui.helpers.Td5Gauge-->
<!--                android:id="@+id/gauge_injection_quantity"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="10sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/text_injection_quantity_value"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="xxx PlaceHolder xxx"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/textColorPrimary"-->
<!--                android:textSize="16sp" />-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fuel_temperature_label"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                app:layout_gravity="fill" />

            <com.mooo.hairyone.td5tester.ui.helpers.Td5Gauge
                android:id="@+id/gauge_fuel_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp" />

            <TextView
                android:id="@+id/text_fuel_temperature_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxx PlaceHolder xxx"
                android:textAlignment="center"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/air_fuel_ratio_label"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                app:layout_gravity="fill" />

            <com.mooo.hairyone.td5tester.ui.helpers.Td5Gauge
                android:id="@+id/gauge_air_fuel_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp" />

            <TextView
                android:id="@+id/text_air_fuel_ratio_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxx PlaceHolder xxx"
                android:textAlignment="center"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>